Closed Bug 1582619 Opened 6 years ago Closed 6 years ago

Reframing html tags don't get their children pruned

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: TYLin, Assigned: eeejay)

References

Details

Attachments

(1 file)

Per bug 1102175 comment 35, Bug 1102175 Part 1 makes a change that reframing <body> is going to reframe <html> (root element) as well. Thus with my WIP patch stack, accessible/tests/mochitest/treeupdate/test_delayed_removal.html will fail.

However, I think this is an existing issue on m-c that can be reproduced via replacing
iframeDoc.body.style.display = "inline-block"; with iframeDoc.documentElement.style.display = "grid"; in test_delayed_removal.html, which force <html> to reframe.

Eitan, I make an attempt to fix this issue with my limited understanding of the accessible tree. It does fix test_delayed_removal.html, but fails another test. Would you mind taking a look?

This is a try run with my patch against m-c (It doesn't contain the patch stack in bug 1102175).
https://treeherder.mozilla.org/#/jobs?repo=try&author=aethanyc%40gmail.com&selectedJob=267582630

Flags: needinfo?(eitan)

(In reply to Ting-Yu Lin [:TYLin] (UTC-7) from comment #1)

Eitan, I make an attempt to fix this issue with my limited understanding of the accessible tree. It does fix test_delayed_removal.html, but fails another test. Would you mind taking a look?

This is a try run with my patch against m-c (It doesn't contain the patch stack in bug 1102175).
https://treeherder.mozilla.org/#/jobs?repo=try&author=aethanyc%40gmail.com&selectedJob=267582630

No, I think you need to change GetAccessibleOrDescendant to return the document's accessible if the doc's root element is passed.

Flags: needinfo?(eitan)
Assignee: nobody → eitan

Jamie, I notice that Eitan is on PTO though the end of December. Is the patch ready to land? It does fix the test failure I described in comment 0. Here a try run with Eitan's patch and my patches in bug 1102175 combined.

If you feel the patch is ready to land, I can rebase it and land it.

Flags: needinfo?(jteh)
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2c127e9d463b Return DocAccessible if doc root element is passed to GetAccessibleOrDescendant. r=Jamie

Sorry this slipped through the cracks. I've approved the patch, set deps correctly so it applies cleanly and triggered landing.

Flags: needinfo?(jteh)
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: