Bug 1582619 - Return DocAccessible if doc root element is passed to GetAccessibleOrDescendant. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D47365